force-app/main/default/objects/Assessment_Visit__c/Assessment_Visit__c.object-meta.xml
<CustomObject>
    <label>Assessment Visit</label>
    <nameField>
        <displayFormat>Assessment Visit-{000000}</displayFormat>
        <label>Assessment Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>