force-app/main/default/objects/Assessment_Visit__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>