force-app/main/default/objects/Assessment_Visit__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Received, Not Yet Assigned</fullName>
            </value>
            <value>
                <fullName>Application Signed</fullName>
            </value>
            <value>
                <fullName>Family Assessment Completed</fullName>
            </value>
            <value>
                <fullName>Home Assessment Completed</fullName>
            </value>
            <value>
                <fullName>Recon Home Visit Performed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>