force-app/main/default/objects/Assessment_Visit__c/fields/Home_Approval__c.field-meta.xml
<CustomField>
    <fullName>Home_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Approval</label>
    <referenceTo>Home_Approval__c</referenceTo>
    <relationshipLabel>Assessment Visits</relationshipLabel>
    <relationshipName>Assessment_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>