force-app/main/default/objects/Assessment_Visit__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <formula>NOT(ISBLANK(TEXT(Activity_Type__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If active type filled.</inlineHelpText>
    <label>Verified (Filled Active Type)</label>
    <type>Checkbox</type>
</CustomField>