force-app/main/default/objects/Assessment_Visit__c/recordTypes/Assessment_Visit.recordType-meta.xml
<RecordType>
    <fullName>Assessment_Visit</fullName>
    <active>false</active>
    <label>Assessment Visit</label>
</RecordType>